# SpectrumSDT

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  code_structure.dot  compiler_options.cmake  compiler_options_default.cmake  source_dependencies.cmake
PES/dawes/src/: 2D-spline.f  C6r.f  Celr.f  PES_3D_subroutine_ozone_L3.f90  VLGRoo.f  splin.f90
PES/ozone/: compile_pesprint.sh  pesprint.f90
PES_examples/: pes_utils.f90
PES_examples/o3_ar/: Makefile  a.out  compile.sh  example.f90  isotopologue_coordinates_conversion.f90  isotopologue_coordinates_conversion_mod.mod  lapack_interface_mod.mod  o3_ar_pes.f90
PES_examples/ozone/: compile.sh  compile_alt.sh  compile_pesprint.sh  ozone_pes.f90  ozone_pes_alt.f90  ozone_utils.f90  pesprint.f90
PES_examples/ozone/dawes/: MEP_rho.txt  compile.sh  compile_alt.sh  ozone_pes.f90  ozone_pes_alt.f90
PES_examples/ozone/tyuterev/: compile.sh  ozone_nr_pes_2013_hyps.f  ozone_pes.f90
PES_examples/so2/: compile.sh  so2_pes.f90
PES_examples/so2/klos/: README.txt  so2-C-mrcif12.f  so2-X-ccsdtf12.f  so2-X-mrcif12.f  test_output_C_MRCIF12.txt  test_output_X_CCF12.txt  test_output_X_MRCIF12.txt
PES_examples/water/: compile.sh  water_pes.f90
PES_examples/water/partridge/: h2opes.f
PES_examples/water/shirin/: pota.f  potb.f
compiler_options_alternative/: ifort_ftn.cmake
config_examples/: basis.config  full.config  grids.config  optgrid.config  optgrid_extra_small.config  optgrid_small.config  optgrid_smaller.config  optimized_grid.config  overlaps.config  pesprint.config  spectrumsdt.config  spectrumsdt_smaller.config  spectrumsdt_template.config  template.config
config_examples/o3/: grids.config  optimized_grid.config  spectrumsdt.config  spectrumsdt_coupled_resonances.config  spectrumsdt_simple.config
config_examples/o3/1.simple/: grids.config  spectrumsdt.config
config_examples/o3/2.resonances/: grids.config  spectrumsdt.config  state_properties.fwc
config_examples/o3/3.coupled_resonances/: grids.config  spectrumsdt.config  states.fwc
config_examples/so2/: grid.config  spectrumsdt.config  states.fwc
extra/mklmods/: mkl_dft_type.mod
libs/fdict/: .gitignore  setup.make
libs/fdict/smeka/: Makefile.default
libs/ftl/: makefile
libs/petsc/: .gitignore
libs/slepc/: .gitignore  CONTRIBUTING.md  CTAGS  GNUmakefile  LICENSE.md  PKG-INFO  README.md  TAGS  TAGS_PYTHON  configure  gmakefile  gmakefile.test  makefile  setup.py
libs/slepc/config/: argdb.py  configure.py  install.py  log.py  package.py
libs/slepc/docs/: changes.html  faq.html  instal.html  mail_list.html  makefile  makefile.html  manual.html
libs/slepc/include/: index.html  makefile  makefile.html  slepc.h  slepc.h.html  slepcblaslapack.h  slepcblaslapack.h.html  slepcblaslapack_mangle.h  slepcblaslapack_mangle.h.html  slepcbv.h  slepcbv.h.html  slepcds.h  slepcds.h.html  slepceps.h  slepceps.h.html  slepcfn.h  slepcfn.h.html  slepclme.h  slepclme.h.html  slepcmat.h  slepcmat.h.html  slepcmath.h  slepcmath.h.html  slepcmfn.h  slepcmfn.h.html  slepcnep.h  slepcnep.h.html  slepcpep.h  slepcpep.h.html  slepcrg.h  slepcrg.h.html  slepcrgtypes.h  slepcrgtypes.h.html  slepcsc.h  slepcsc.h.html  slepcst.h  slepcst.h.html  slepcsvd.h  slepcsvd.h.html  slepcsys.h  (+5 more)
libs/slepc/pypi/: __init__.py
libs/slepc/src/: index.html  makefile  makefile.html
scripts/: SpectrumConfig.py  SpectrumSDTConfig.py  extract_MEP.py  init_spectrum_folders.py  init_spectrumsdt_folders.py
src/base/: cap.f90  constants.f90  coordinate_conversion.f90  debug_tools.f90  debug_tools_base.f90  formulas.f90  general_vars.f90  grid_info.f90  grids.F90  grids.f90  numerical_recipies.f90  potential.F90  potential.f90  sdt.f90  spectrumsdt.f90  spectrumsdt_paths.F90  spectrumsdt_paths.f90  spectrumsdt_utils.f90  spectrumsdt_utils_ext.f90  state_properties.f90
src/base/basis/: basis.f90  basis_base.f90  basis_complex.F90  basis_real.F90  basis_template.F90
src/base/debug/: debug_tools.f90  wf_print.f90
src/base/eigencalc/: matmul_operator.F90  matmul_operator.f90  slepc_solver.F90  spectrum.F90  spectrum.f90
src/base/eigensolve/: eigensolve.f90  matmul_operator.f90  slepc_solver.F90  spectrum.f90
src/base/hamiltonian/: distributed_rovib_hamiltonian.F90  distributed_rovib_hamiltonian.f90  k_block_info.F90  k_block_info.f90  matrix_block_info.F90  matrix_block_info.f90
src/base/input_params/: basis_params.f90  cap_params.f90  config.f90  debug_params.f90  eigencalc_params.f90  eigensolve_params.f90  fixed_basis_params.f90  grid_params.f90  input_params.f90  optgrid_params.f90  stage_metadata.F90  stage_metadata.f90  wf_section_params.f90
src/base/io/: spectrumsdt_io.f90  spectrumsdt_io_base.f90  spectrumsdt_io_complex.F90  spectrumsdt_io_real.F90  spectrumsdt_io_template.F90
src/base/overlaps/: overlaps.f90  overlaps_base.f90  overlaps_complex.F90  overlaps_real.F90  overlaps_template.F90
src/base/properties/: properties.f90  properties_base.f90  properties_complex.F90  properties_real.F90  properties_template.F90
src/include/: funcs.macro  reset_definitions.macro  type_attributes.macro  type_list.macro
src/input_params/: config.f90  input_params.f90  stage_metadata.F90
src/interface/: lapack.f90
src/interface/fdict/: dict.F90  dict_char_str.F90  dict_integer.F90  dict_utils.f90  dict_utils_base.f90  dict_utils_char_str.F90  dict_utils_integer.F90  (+2 more)
src/programs/: equgrid.f90  kinetics.f90  optgrid.f90  pes_interpolation.f90  pesprint.f90  spectrumsdt.F90  spectrumsdt.f90  zpeO2.f
src/rovib/: block_borders.f90  distributed_rovib_hamiltonian.f90  k_block_info.f90  matrix_block_info.f90  overlaps_extra.f90  rovib_io.f90  rovib_utils.f90  rovib_utils_base.f90  state_properties.f90
src/tools/: cap.f90  config.f90  debug_tools.f90  formulas.f90  general_vars.f90  hpsort.f90  index_conversion.f90  input_params.f90  numerical_recipies.f90  numerical_recipies.mod  optgrid_tools.f90  parabola.f90  sdt.f90
src/utils/: algorithms.f90  constants.f90  fourier_transform.f90  parallel.f90  path.f90  path_utils.f90  rovib_utils.f90  system.f90
(+3128 files in other folders)
